fix alignment of filter icons. Card 425

--- a/app/styles/components/menus/_filter_groups_menu.scss
+++ b/app/styles/components/menus/_filter_groups_menu.scss
@@ -16,17 +16,11 @@
         display: block;
         position: absolute;
         left: $tiny-size;
-        top: $x-small-size;
+        top: calc(50% - (#{$large-size} / 2));
       }
       &:after {
         top: $medium-size;
       }
-    }
-  }
-
-  .filter-group-complementary-1, .filter-group-complementary-2 {
-    .layer-toggle:before {
-      top: $medium-size;
     }
   }
 
